# Source files and their filters
B3DGlobSourceFiles(${CMAKE_CURRENT_SOURCE_DIR} "" "" BS_NULLAUDIO_SRC)

# Target
add_library(bsfNullAudio SHARED ${BS_NULLAUDIO_SRC})

# Common flags
B3DSetDefaultLinkAndCompileFlags(bsfNullAudio)

# Includes
target_include_directories(bsfNullAudio PRIVATE "./")

# Libraries
## Local libs
target_link_libraries(bsfNullAudio PRIVATE bsf)

# IDE specific
set_property(TARGET bsfNullAudio PROPERTY FOLDER Plugins)

# Install
if(B3D_AUDIO_BACKEND MATCHES "Null")
	B3DSetUpPostBuildAndInstallSteps(bsfNullAudio)
endif()
